# adventofcode

./: .gitignore  adventofcode.py  aoc2020_d01.py  aoc2020_d02.py  aoc2020_d04.py  aoc2020_d05mobile.py  aoc2020_d06.py  d07_solution.py  pyproject.toml  requirements.txt
.github/workflows/: black.yml  (+1 more)
2015/: aoc2015_d01.py  aoc2015_d02.py  aoc2015_d03.py  aoc2015_d04.py  aoc2015_d05.py  aoc2015_d06.py  aoc2015_d07.py  aoc2015_d08.py  aoc2015_tools.py
2016/: aoc2016_tools.py
2017/: aoc2017_d01.py  aoc2017_d02.py
2018/: aoc2018_d01.py  aoc2018_d02.py  aoc2018_d03.py  aoc2018_d04.py  aoc2018_d05.py  aoc2018_d06.py
2019/: aoc2019_d2.py  aoc2019_d3.py  aoc2019_d4.py
2020/: aoc2020_d02.py  aoc2020_d03.py  aoc2020_d04.py  aoc2020_d05mobile.py  aoc2020_d06.py  aoc2020_d07.py  aoc2020_d08.py  d07_solution.py
2021/: aoc2021_d01.py  aoc2021_d02.py  aoc2021_d03.py  aoc2021_d04.py  aoc2021_d05.py  aoc2021_d06.py  aoc2021_d07.py  aoc2021_d08.py  aoc2021_d09.py  aoc2021_d11.py
AoC2019/: aoc2019_d1.py  aoc2019_d3.py
AoC2020/: aoc2020_d05mobile.py  aoc2020_d06.py  aoc2020_d07.py  backup_costs.py
aoc_2020/: day_01.py
aoc_2021/: day_11.py  day_13.py  day_14.py  day_15.py  day_XX.py
aoc_2022/: day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py  day_XX.py
aoc_2023/: day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_08.py  day_10.py  day_15.py  day_19.py  day_XX.py  progress.txt
misc/: Filesystem.py  dijkstra.py
testground/: curses_test.py  fullscreen.py  rich_live_table.py  testground.ipynb
(+29 files in other folders)
