[tool.poetry]
authors = ["Robert Frießleben <robert.friessleben@gmail.com>"]
description = ""
name = "adventofcode"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.10"
rich = "^10.15.2"

[tool.poetry.dev-dependencies]
black = "^21.11b1"
flake8 = "^4.0.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[flake8]
max-line-length = 88
